<resources>
    <string name="app_name">My Tools</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>

    <string name="pref_theme_title">Theme</string>
    <string name="pref_key_theme" translatable="false">key_theme</string>

    <string name="pref_theme_auto" translatable="false">auto</string>
    <string name="pref_theme_light" translatable="false">light</string>
    <string name="pref_theme_dark" translatable="false">Dark</string>

    <string name="theme_auto">Automatic</string>
    <string name="theme_light">Light Mode</string>
    <string name="theme_dark">Dark Mode</string>

    <string name="title">title</string>
    <string name="summary">summary</string>

    <string name="message_success_copy_to_clipboard">Success copy %1$s to clipboard</string>


    <!--    string items tools-->
    <string name="key_screen_resolution_changer">screen_resolution_changer</string>
    <string name="title_screen_resolution_changer">Screen Resolution Changer</string>
    <string name="desc_screen_resolution_changer">Change screen resolution and pixel density (DPI)</string>

    <string name="key_fh_pw_generator">fh_pw_generator</string>
    <string name="title_fh_pw_generator">Wifi FH Password Generator</string>
    <string name="desc_fh_pw_generator">Generate default password for the Fiber Home WiFi</string>

    <string name="key_speed_test">speed_test</string>
    <string name="title_speed_test">Speed Test</string>
    <string name="desc_speed_test">Tests the speed, stability, and responsiveness of your internet connection.</string>

    <string name="key_router_manager">router_manager</string>
    <string name="title_router_manager">Router Manager</string>
    <string name="desc_router_manager">Access and manage the router admin panel.</string>

    <string name="coming_soon">Coming Soon</string>

    <!-- string for screen resolution changer tool   -->
    <string name="resolution_changer">Resolution Changer</string>
    <string name="scr_root">Root</string>
    <string name="src_adb">ADB</string>
    <string name="next">Next</string>
    <string name="check_permission">Check Permission</string>
    <string name="select_working_mode">Select Working Mode</string>
    <string name="please_select_working_mode">Please select working mode!</string>
    <string name="permission_status">Status Permission : %1$s</string>
    <string name="permission_granted">Granted</string>
    <string name="permission_not_granted">Not Granted</string>

    <string name="title_tutorial_give_permission_adb">How to give permission :</string>
    <string name="body_tutorial_give_permission_adb_1">1. Enable developer mode: go to android settings -> about phone and look for the build number option. Tap it multiple times until developer mode is enabled.</string>
    <string name="body_tutorial_give_permission_adb_2">2. Enable USB debugging: go to android settings developer options and look for USB debugging.</string>
    <string name="body_tutorial_give_permission_adb_3">3. Setup ADB on your pc.</string>
    <string name="body_tutorial_give_permission_adb_4">4. Connect device with computer: connect your device with your computer and look at your phone. A prompt may show up asking you to allow debugging by your computer, accept.</string>
    <string name="body_tutorial_give_permission_adb_5">5. In terminal, write:</string>

    <string name="code_tutorial_give_permission_adb">adb shell pm grant com.yogs.mytools android.permission.WRITE_SECURE_SETTINGS</string>
    <string name="copy_code">Copy Code</string>

    <string name="display_info">Display Info</string>
    <string name="current_resolution">Resolution : %1$s</string>
    <string name="current_dpi">DPI : %1$s</string>
    <string name="change_resolution_and_dpi">Change Resolution &amp; DPI</string>
    <string name="x">x</string>
    <string name="apply">Apply</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="dpi">DPI</string>




    <!--  string for speedtest tool  -->
    <string name="speed_test">Speed Test</string>
    <string name="disable_prefix_results">results</string>
    <string name="disable_prefix_widget">widget</string>
    <string name="copy_url">copy url</string>
    <string name="url">url</string>
    <string name="refresh">Refresh</string>


    <!--  string for router manager tool  -->
    <string name="router_manager">Router Manager</string>
    <string name="wifi_status">WiFi Status : %1$s</string>
    <string name="wifi_status_connected">Connected</string>
    <string name="wifi_status_not_connected">Not Connected</string>
    <string name="wifi_ssid">WiFi SSID : %1$s</string>
    <string name="default_gateway">Default Gateway : %1$s</string>
    <string name="ip_address">Ip Address : %1$s</string>
    <string name="unknown_action">Unknown Action</string>
    <string name="reset">Reset</string>
    <string name="save_and_apply"><![CDATA[Save & Apply]]></string>
    <string name="load">Load</string>


</resources>