<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackgroundWebUi"
    tools:context=".ui.router_manager.RouterManagerActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@drawable/bg_header_curved_web_ui"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIconTint="?attr/colorOnWebUi"
            app:title="@string/router_manager"
            app:titleTextAppearance="@style/ToolbarTitle"
            app:titleTextColor="?attr/colorOnWebUi" />
    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_connection_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:cardBackgroundColor="?attr/colorSurface"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp"
        app:strokeColor="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_wifi_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/wifi_status"
                android:textAppearance="?attr/textAppearanceTitleSmall"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_wifi_ssid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/wifi_ssid"
                android:textAppearance="?attr/textAppearanceTitleSmall"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_wifi_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_ip_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/ip_address"
                android:textAppearance="?attr/textAppearanceTitleSmall"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_wifi_ssid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_default_gateway"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/default_gateway"
                android:textAppearance="?attr/textAppearanceTitleSmall"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_ip_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/textAppearanceButton"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/refresh"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/card_connection_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading_init_web_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="?attr/colorPrimary"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <WebView
        android:id="@+id/web_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/loading_page_web_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="?attr/colorPrimary"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />





</androidx.constraintlayout.widget.ConstraintLayout>